<resources>
    <string name="app_name">Sample Movie App</string>
    <string name="lbl_welcome">Welcome to\nReady To Travel</string>
    <string name="lbl_welcome_desc">Sign up with facebook for the most \nfulfilling trip planning experience with us!</string>
    <string name="str_facebook">Log in with Facebook</string>
    <string name="str_gmail">Log in with email address</string>
    <string name="str_create_account">Create a new account</string>
    <string name="str_almost_there">Almost there!</string>
    <string name="str_almost_there_desc">Complete the form below to create\nyour Ready to Travel account.</string>
    <string name="lbl_first_name">First Name *</string>
    <string name="lbl_last_name">Last Name *</string>
    <string name="lbl_mandatory">*Mandatory</string>
    <string name="lbl_email_address">Email Address *</string>
    <string name="lbl_dob">Date of Birth *</string>
    <string name="lbl_nationality">Nationality *</string>
    <string name="lbl_country">Country of Residence *</string>
    <string name="lbl_mobile_no">Mobile no. (optional)</string>
    <string name="str_female">Female</string>
    <string name="str_male">Male</string>
    <string name="hint_date_format">DD/MM/YYYY</string>
    <string name="str_create_my_account_now">Create my account now</string>
    <string name="lbl_what_are_you_looking_for">What are you looking for ?</string>
    <string name="str_search">Search</string>
    <string name="lbl_recommended">Recommended</string>
    <string name="str_upcoming">Upcoming</string>
</resources>